...
    );
  }

  @override
  Widget build(BuildContext context) => Scaffold(
    appBar: AppBar(
      title: const Text('Join organization'),
      actions: [
        IconButton(
          icon: Icon(
            _scanning ? Icons.keyboard_outlined : Icons.qr_code_scanner,
          ),
          tooltip: _scanning ? 'Enter code manually' : 'Scan QR code',
...
